<resources>
    <string name="app_name">Expense Mate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_transactions">Transactions</string>

    <string name="recurring_payments">Recurring Payments</string>
    <string name="add_recurring_payment">Add Recurring Payment</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="due_date">Due Date:</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="payment_name">Payment Name</string>
    <string name="payment_amount">Amount</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>